--- a/Undine.Arch/Undine.Arch.csproj
+++ b/Undine.Arch/Undine.Arch.csproj
@@ -4,7 +4,19 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <Title>Undine bindings for Arch ECS</Title>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+	  <Version>0.0.0.1</Version>
+	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	  <RepositoryUrl>https://github.com/tomaszcekalo/Undine.Arch</RepositoryUrl>
+	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Arch" Version="1.2.7" />
