move to newest version of undine.core

--- a/Undine.Arch.Tests/Undine.Arch.Tests.csproj
+++ b/Undine.Arch.Tests/Undine.Arch.Tests.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\Undine.Arch\Undine.Arch.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Class\" />
+    <Folder Include="Unmanaged\" />
+  </ItemGroup>
+
 </Project>
