--- a/Undine.Arch/Undine.Arch.csproj
+++ b/Undine.Arch/Undine.Arch.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+	  <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
     <Title>Undine bindings for Arch ECS</Title>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-	  <Version>0.0.0.2</Version>
+	  <Version>0.0.0.3</Version>
 	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	  <RepositoryUrl>https://github.com/tomaszcekalo/Undine.Arch</RepositoryUrl>
 	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -19,7 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="Arch" Version="1.2.7" />
-    <PackageReference Include="Undine.Core" Version="0.0.0.8" />
+    <PackageReference Include="Undine.Core" Version="0.0.0.9" />
   </ItemGroup>
 
 </Project>
